Fix weird gaps and more modernized look.

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,5 +1,5 @@
 body{
-	background-color: black;
+	background-color: white;
 	/*position: relative;*/
 	font-family: 'Raleway';
 	margin: 0px 0px 0px 0px;
@@ -8,8 +8,6 @@ body{
 p{
 	text-align:center;
 	font-size: 20px;
-	padding-left: 100px;
-	padding-right: 100px; 
 }
 
 a{
@@ -38,10 +36,8 @@ h1{
 	font-family: 'Roboto Condensed', sans-serif;
 }
 
-a:hover{
-	background-color: white;
-	color: black;
-	border-spacing: 10px;
+div, h1{
+	color: white;
 }
 
 header{
@@ -56,7 +52,7 @@ header{
 	justify-content: center;
 	/*Places the items in the center vertically*/
 	align-items: center;
-	margin-bottom: 50px;
+	margin-bottom: 0px;
 	color: white;
 }
 
@@ -67,8 +63,12 @@ img{
 	height: 300px;
 	max-height: 500px;
 	max-width: 500px;
-	border: white;
 }
+
+img:hover{
+	opacity: 50%;
+}
+
 footer{
 	color: rgb(229,228,221);
 	font-family: Helvetica;
@@ -83,9 +83,33 @@ footer{
 }
 
 /*Class*/
-.bgGrey{
+
+.image{
+	background: grey;
+	text-align: center;
+	padding: 1px;
+	margin: 0px auto;
+}
+
+.image a:hover{
+	opacity: 0.5;
+}
+
+.thingsToCheckOut{
 	background-color: grey;
-	padding: 20px;
+	color: white;
+	text-align: center;
+	padding-left: 100px;
+	padding-right: 100px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	border-bottom: 1px solid white;
+}
+
+.thingsToCheckOut a:hover{
+	background-color: white;
+	color: black;
+	border-spacing: 10px;
 }
 
 .contactme{
@@ -94,6 +118,8 @@ footer{
 
 .moreinfo{
 	font-size: 20px;
+	margin: 0px auto;
+	padding: 10px;
 }
 
 /*ID*/
@@ -110,10 +136,17 @@ footer{
 	color: white;
 	text-align: center;
 	padding: 100px;
+	margin-bottom: 0px;
 }
 
 #bgText{
 	background: lightgrey;
+}
+
+#pageInWork{
+	background-color: black;
+	text-align: center;
+	padding: 100px;
 }
 
 #navBar{
